--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint": "^6.8.0",
     "eslint-config-portsoc": "^0.6.0",
+    "seedrandom": "^3.0.5",
     "three": "^0.115.0"
   },
   "devDependencies": {
