--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "test"
   },
   "dependencies": {
+    "cli-progress": "^3.10.0",
+    "node-fetch": "^3.2.3",
     "seedrandom": "^3.0.5",
     "three": "^0.115.0"
   },
