Push before testing

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ node_modules/
 eslint-config-portsoc/
 .vscode
 modeling/test-models/Testing Scene-Arrays.json
+modeling/test-models/exitance-arrays/*).json
